--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/charts": "^1.3.6",
     "react": "^16.12.0 || ^17.0.0"
   },
   "devDependencies": {
