--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "private": true,
+  "private": false,
   "name": "wui",
+  "description": "wui is a react component library",
   "version": "1.0.0",
   "scripts": {
     "start": "dumi dev",
